# mangaready

./: .gitignore  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 247db93a4875_user.py
src/: app.py  config.py  di.py  extensions.py
src/domain/dtos/: __init__.py  auth.py  users.py
src/domain/exceptions/: __init__.py  base.py  users.py
src/domain/interfaces/: __init__.py  auth.py  uow.py  users.py
src/domain/models/: __init__.py  users.py
src/domain/usecases/: __init__.py  auth.py
src/infrastructures/api/: __init__.py  auth.py
src/infrastructures/repositories/: __init__.py  uow.py  users.py
src/infrastructures/services/: __init__.py  auth.py
tests/: helpers.py
tests/data/domain/usecases/auth/register_user/: dto.json
tests/domain/usecases/: test_auth.py
