[project]
name = "mangaready"
version = "0.1.0"
description = "Service for reading manga"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "dishka>=1.5.3",
    "email-validator>=2.2.0",
    "fastapi>=0.115.12",
    "greenlet>=3.2.1",
    "orjson>=3.10.16",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]
